<resources>
    <string name="app_name">Caller_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigator">navigator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>



    <string name="title1">this app helps you to calling any one its provide you with history and adding new names .</string>
    <string name="title2">this button helps you to add new names by clicking it and choose save.</string>
    <string name="title3">when you click on card in main page it move you to the add  page this add page helps you to also edit , update or call the one you choose.</string>
    <string name="title4">when you go to navigation bar and choose add image it moves you to page you have the small icon to save
    your image click the big one and you will have an nice image from your camera .</string>
    <string name="title5">this App is made for you so please enjoy.</string>

</resources>